# nndeploy

./: .clang-format  .clang-tidy  .cursorignore  .dockerignore  .git_template.txt  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  README_INFERENCE.md  SECURITY.md  TODO.md  app.py  build.py  build_linux.py  build_mac_arm64.py  build_win.py  clean.py  clone_submodule.py  clone_submodule.sh  config.cmake  e  python_object_lifecycle_example.cpp  q  requirements.txt  run_clang_format.py  run_json.py  xmake.lua
backup/model/detect/: CMakeLists.txt  util.cc
demo/: CMakeLists.txt  README.md  common.h  config.cmake  flag.cc  flag.h
demo/acl_op/: config.cmake  demo.cc  op.cc
demo/ascend_cl/: config.cmake  demo.cc  init_env.sh  permute.cc  permute.h  permute_kernel.cc  permute_test.cc  permute_tiling.h  tiling_data_types.h
demo/ascendc/: config.cmake  demo.cc
demo/ascendc_dev/: config.cmake  demo.cc
demo/base/: README.md  config.cmake  demo.cc
demo/cc/: CMakeLists.txt
demo/cc/detect/: CMakeLists.txt  demo.cc  demo_yolov5.cc
demo/classification/: README.md  config.cmake  demo.cc
demo/codec/: config.cmake  demo.cc
demo/cpp/: demo.cc  detect.cc
demo/dag/: README.md  config.cmake  dag.dot  demo.cc
demo/detect/: CMakeLists.txt  README.md  config.cmake  demo.cc  demo.py  test_parallel_task.cc
demo/detect/meituan_yolov6/: CMakeLists.txt  demo.cc
demo/detect/yolov5/: CMakeLists.txt
demo/detect_concurrency/: README.md  config.cmake  demo.cc  demo_pipeline.cc
demo/device/: config.cmake  demo.cc
demo/feedback/: config.cmake  demo.cc
demo/infer/: config.cmake  demo.cc
demo/inference/: config.cmake  demo.cc
demo/interpret/: README.md  config.cmake  demo.cc
demo/ir/: config.cmake  demo.cc
demo/llama/: README.md  config.cmake  demo.cc  llm.onnx.data  test_llama2.sh
demo/llama-v2/: config.cmake  demo.cc
demo/llm/: README.md  config.cmake  demo.cc  demo.py
demo/loop/: README.md  config.cmake  demo.cc
demo/matting/: README.md  config.cmake  demo.cc
demo/net/: README.md  config.cmake  demo.cc
demo/ocr/: README.md  config.cmake  demo.cc
demo/onnx_converter/: demo.cc
demo/op/: config.cmake  demo.cc
demo/opencl_dev/: config.cmake  demo.cc
demo/optimizer/: README.md  config.cmake  demo.cc
demo/pipeline_dag/: config.cmake
demo/preprocess/: config.cmake  demo.cc
demo/qwen/: config.cmake  demo.cc  test_qwen.sh
demo/resnet/: config.cmake  demo.cc
demo/run_json/: README.md  config.cmake  demo.cc
demo/segment/: CMakeLists.txt  README.md  config.cmake  demo.cc  sam_demo.cc
demo/segment/segment_anything/: CMakeLists.txt
demo/segment_anything/: README.md  config.cmake  demo.cc
demo/stable_diffusion/: README.md  config.cmake  demo.cc
demo/super_resolution/: README.md  config.cmake  demo.cc
demo/tensor_pool/: README.md  config.cmake  demo.cc  test.cc  test.h
demo/tensor_pool_multi_net/: README.md  config.cmake  demo.cc
demo/test_acl/: config.cmake  demo.cc
demo/test_net/: config.cmake  test.cc  test.h  test_net.cc
demo/test_op/: config.cmake  demo.cc
demo/thread_pool/: config.cmake  demo.cc
demo/tokenizer_cpp/: config.cmake  demo.cc
demo/track/: README.md  config.cmake  demo.cc
ffi/java/: CMakeLists.txt  README.md  config.cmake
ffi/java/nndeploy/: GraphRunner.java  GraphRunnerExample.java  GraphRunnerResult.java
nncore/source/base/: CMakeLists.txt  value.cc
nndemo/leetcode/: CMakeLists.txt  solution_template.cc
nndeploy/: CMakeLists.txt
nndeploy/include/architecture/: buffer.h  device.h  mat.h  memory_pool.h
nndeploy/include/backend/: backend.h  buffer.h  device.h  memory_pool.h
nndeploy/include/base/: CMakeLists.txt  basic.h  config.h  decrypt.h  file.h  half.h  include_c_cpp.h  log.h  macro.h  object.h  opencv_include.h  openmp.h  param.cc  param.h  profiler.h  shape.cc  shape.h  status.cc  status.h  string.h  thread_pool.h  time_measurement.h  type.h  value.h
nndeploy/include/cryption/: cryption.h  decrypt.h
nndeploy/include/cv/: common.h  resize.h
nndeploy/include/device/: architecture.h  buffer.h  buffer_pool.cc  buffer_pool.h  default_tensor_impl.h  device.cc  device.h  mat.cc  mat.h  memory_pool.h  tensor.h  tensor_impl.h
nndeploy/include/encryption_decryption/: encryption_decryption.h
nndeploy/include/engine/: engine.h  graph.h  io.h  node.h
nndeploy/include/forward/: forward.h  forward_impl.h  tensor_pool.h
nndeploy/include/graph/: config.h  edge.h  graph.h  node.h  packet.h
nndeploy/include/inference/: CMakeLists.txt  abstract_inference_impl.h  config.h  config_impl.h  forward.h  forward_impl.h  inference.cc  inference.h  param.h  param_impl.h  tensor.h  tensor_impl.h
nndeploy/include/interpret/: abstract_interpret_impl.h  interpret.h
nndeploy/include/ir/: README.md
nndeploy/include/op/: README.md
nndeploy/include/optimize/: optimize.h
nndeploy/include/task/: config.h  edge.h  graph.h  loop.h  node.h  packet.h  pipeline.cc  pipeline.h  task.cc  task.h
nndeploy/include/thread/: thread_pool.h
nndeploy/source/base/: CMakeLists.txt  README.md  basic.cc  basic.h  decrypt.h  file.cc  file.h  glic_stl_include.h  half.cc  half.h  include_c_cpp.h  log.h  macro.h  object.h  param.cc  param.h  profiler.h  saturate_cast.h  shape.cc  shape.h  status.cc  status.h  string.cc  string.h  thread_pool.h  time_measurement.cc  time_measurement.h  type.cc  type.h  value.cc  value.h
nndeploy/source/cryption/: decrypt.h
nndeploy/source/cv/: README.md  common.h  resize.h
nndeploy/source/device/: CMakeLists.txt  README.md  architecture.cc  architecture.h  buffer.cc  buffer.h  buffer_pool.cc  buffer_pool.h  default_tensor_impl.cc  (+10 more)
nntask/: .gitignore  CMakeLists.txt
nntask/include/: README.md
python/: CMakeLists.txt  README.md  config.cmake  develop.md  run_json.py  setup.py  setup.py.cfg
python/nndeploy/: __init__.py  nndeploy.py  test.py
python/src/: init.cc  main.cc  nndeploy_api_registry.cc  nndeploy_api_registry.h  pybind11_op.h  pybind11_tensor.h
source/nndeploy/: CMakeLists.txt
(+2872 files in other folders)
